--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,20 @@
 ### IntelliJ IDEA ###
+# IntelliJ IDEA project files
+.idea/
+*.iml
+*.ipr
+*.iws
 out/
 !src/main/**/out/
 !**/src/test/**/out/
 
 ### Eclipse ###
+# Eclipse project files
 .apt_generated
 .classpath
 .factorypath
 .project
-.settings
+.settings/
 .springBeans
 .sts4-cache
 bin/
@@ -16,6 +22,7 @@ bin/
 !**/src/test/**/bin/
 
 ### NetBeans ###
+# NetBeans project files
 /nbproject/private/
 /nbbuild/
 /dist/
@@ -23,7 +30,68 @@ bin/
 /.nb-gradle/
 
 ### VS Code ###
+# Visual Studio Code settings
 .vscode/
 
-### Mac OS ###
+### Operating System Files ###
+# macOS
 .DS_Store
+.AppleDouble
+.LSOverride
+
+# Windows
+Thumbs.db
+Desktop.ini
+
+# Linux
+*~
+
+### Build Directories ###
+# Maven
+target/
+# Gradle
+build/
+
+### Logs and Temporary Files ###
+*.log
+*.tmp
+*.bak
+*.swp
+*.swo
+
+### Environment ###
+.env
+.env.local
+.env.*.local
+
+### Java ###
+*.class
+
+### Libraries ###
+# JAR files
+*.jar
+*.war
+*.ear
+
+### Node.js ###
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+### Dependency Directories ###
+# Mac package manager
+/Library/Caches/Homebrew/
+
+# Android Studio
+.idea/caches/
+.idea/libraries/
+.idea/modules.xml
+.idea/workspace.xml
+.idea/misc.xml
+.gradle/
+**/build/
+
+# Python
+__pycache__/
+*.py[cod]
